--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Djokovic xô đổ kỷ lục của Nadal",
+    "content": "Novak Djokovic đã chính thức xô đổ kỷ lục của Rafael Nadal với trận thắng thứ 411 tại ATP Tour, khi đánh bại Camilo Ugo Carabelli với tỷ số 6-1, 7-6(1) tại vòng ba Miami Mở rộng. Chiến thắng này giúp Djokovic vượt qua kỷ lục 410 trận thắng ở Masters 1000 của Nadal. Djokovic hiện tại cũng giữ nhiều kỷ lục khác tại Masters 1000, và đang hướng tới danh hiệu Miami lần thứ bảy.",
+    "link": "https://vnexpress.net/djokovic-xo-do-ky-luc-cua-nadal-4864958.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Djokovic đã xô đổ kỷ lục nào của Nadal?",
+    "answers": [
+      {
+        "text": "Kỷ lục 410 trận thắng tại Masters 1000",
+        "correct": true
+      },
+      {
+        "text": "Kỷ lục 99 lần vào tứ kết",
+        "correct": false
+      },
+      {
+        "text": "Kỷ lục 40 Cup",
+        "correct": false
+      },
+      {
+        "text": "Kỷ lục 59 trận chung kết",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cậu bé nhặt bóng trở thành người hùng khi Đức loại Italy",
     "content": "Trong trận tứ kết lượt về Nations League tối 23/3, cậu bé nhặt bóng Noel Urbaniack đã có một khoảnh khắc đáng nhớ khi nhanh chóng ném bóng cho Joshua Kimmich thực hiện đá phạt góc, tạo điều kiện cho Jamal Musiala ghi bàn cho đội tuyển Đức. Mặc dù Italy đã gỡ hòa trận đấu, Đức vẫn giành chiến thắng với tỷ số 5-4 và tiến vào bán kết. Urbaniack đã nhận được trái bóng có chữ ký của các tuyển thủ Đức như một món quà tri ân cho sự nhanh nhạy của mình.",
     "link": "https://vnexpress.net/cau-be-nhat-bong-tro-thanh-nguoi-hung-khi-duc-loai-italy-4864949.html",
@@ -2071,33 +2098,6 @@
     ]
   },
   {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
-    "answers": [
-      {
-        "text": "Bơ, táo, lê, lựu, cam",
-        "correct": true
-      },
-      {
-        "text": "Chuối, dưa hấu, nho",
-        "correct": false
-      },
-      {
-        "text": "Xoài, dứa, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho khô, hạt chia, bưởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
     "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
@@ -2151,6 +2151,33 @@
       },
       {
         "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "answers": [
+      {
+        "text": "Bơ, táo, lê, lựu, cam",
+        "correct": true
+      },
+      {
+        "text": "Chuối, dưa hấu, nho",
+        "correct": false
+      },
+      {
+        "text": "Xoài, dứa, kiwi",
+        "correct": false
+      },
+      {
+        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
@@ -2322,59 +2349,28 @@
     ]
   },
   {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
+    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
+    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
+    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
     "answers": [
       {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
+        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
         "correct": true
       },
       {
-        "text": "Chỉ gây hại về mặt tâm lý.",
+        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
         "correct": false
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
         "correct": false
       },
       {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
-    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
-    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
-    "answers": [
-      {
-        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Uống nhiều đồ uống có gas.",
-        "correct": false
-      },
-      {
-        "text": "Không cần súc miệng sau khi ăn.",
+        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
         "correct": false
       }
     ]
@@ -2434,28 +2430,59 @@
     ]
   },
   {
-    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
-    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
-    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
+    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
+    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
+    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
     "answers": [
       {
-        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
+        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
         "correct": true
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
+        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
+        "text": "Uống nhiều đồ uống có gas.",
         "correct": false
       },
       {
-        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
+        "text": "Không cần súc miệng sau khi ăn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hệ lụy 'tình một đêm'",
+    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
+    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
+    "answers": [
+      {
+        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây hại về mặt tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Giúp cải thiện sức khỏe tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe sinh lý.",
         "correct": false
       }
     ]
@@ -2658,33 +2685,6 @@
     ]
   },
   {
-    "title": "6 món ăn người tiểu đường nên tránh",
-    "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
-    "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người tiểu đường nên tránh những món ăn nào để kiểm soát đường huyết?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu tinh bột, kẹo ngọt, thịt mỡ, thực phẩm chiên, trái cây sấy khô, sữa nguyên kem",
-        "correct": true
-      },
-      {
-        "text": "Chỉ nên ăn trái cây tươi",
-        "correct": false
-      },
-      {
-        "text": "Nên ăn nhiều thịt mỡ",
-        "correct": false
-      },
-      {
-        "text": "Chỉ uống nước ngọt không đường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguyên nhân gây cứng khớp",
     "content": "Cứng khớp là triệu chứng phổ biến do nhiều nguyên nhân khác nhau, bao gồm tư thế không đúng, thoái hóa khớp, viêm khớp, và bệnh gout. Thoái hóa khớp là nguyên nhân chính, dẫn đến đau và hạn chế vận động do sự bào mòn sụn khớp. Các bệnh viêm khớp, như viêm khớp dạng thấp và viêm cột sống dính khớp, cũng gây ra tình trạng cứng khớp, đặc biệt là vào buổi sáng. Chấn thương khớp và chế độ ăn uống kém cũng góp phần làm tăng nguy cơ cứng khớp.",
     "link": "https://vnexpress.net/nguyen-nhan-gay-cung-khop-4864539.html",
@@ -2707,6 +2707,33 @@
       },
       {
         "text": "Chỉ do tuổi tác cao",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món ăn người tiểu đường nên tránh",
+    "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
+    "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người tiểu đường nên tránh những món ăn nào để kiểm soát đường huyết?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu tinh bột, kẹo ngọt, thịt mỡ, thực phẩm chiên, trái cây sấy khô, sữa nguyên kem",
+        "correct": true
+      },
+      {
+        "text": "Chỉ nên ăn trái cây tươi",
+        "correct": false
+      },
+      {
+        "text": "Nên ăn nhiều thịt mỡ",
+        "correct": false
+      },
+      {
+        "text": "Chỉ uống nước ngọt không đường",
         "correct": false
       }
     ]
@@ -2805,37 +2832,6 @@
     ]
   },
   {
-    "title": "Xúc động chương trình nghệ thuật \"Sáng mãi truyền thống phụ nữ Ba đảm đang\"",
-    "content": "Chương trình nghệ thuật \"Sáng mãi truyền thống phụ nữ Ba đảm đang\" diễn ra vào tối 22/3 đã tôn vinh những đóng góp to lớn của phụ nữ Việt Nam trong lịch sử. Được tổ chức bởi Hội Liên hiệp Phụ nữ Hà Nội và Đài PT-TH Hà Nội, chương trình có sự tham gia của nhiều nghệ sĩ nổi tiếng và tái hiện lại phong trào \"Ba đảm đang\" khởi nguồn 60 năm trước tại Đan Phượng. Chương trình không chỉ là một lời tri ân mà còn nhắc nhở về trách nhiệm gìn giữ và phát huy truyền thống tốt đẹp của phụ nữ Việt Nam.",
-    "link": "https://dantri.com.vn/giai-tri/xuc-dong-chuong-trinh-nghe-thuat-sang-mai-truyen-thong-phu-nu-ba-dam-dang-20250323175226542.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chương trình \"Sáng mãi truyền thống phụ nữ Ba đảm đang\" được tổ chức vào ngày nào?",
-    "answers": [
-      {
-        "text": "22/3",
-        "correct": true
-      },
-      {
-        "text": "23/3",
-        "correct": false
-      },
-      {
-        "text": "21/3",
-        "correct": false
-      },
-      {
-        "text": "20/3",
-        "correct": false
-      },
-      {
-        "text": "25/3",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao nam giới không thể mang thai?",
     "content": "Nam giới không thể mang thai do thiếu các cơ quan sinh sản cần thiết như tử cung và buồng trứng, cũng như hormone để duy trì thai kỳ. Một số trường hợp nam giới chuyển giới vẫn có thể mang thai nếu chưa phẫu thuật cắt bỏ tử cung và ngừng sử dụng hormone testosterone. Cơn đau đẻ mà phụ nữ trải qua là một dạng đau sinh lý khác biệt mà nam giới không thể cảm nhận được, mặc dù có thể sử dụng máy mô phỏng để trải nghiệm cảm giác này. Tuy nhiên, việc này có thể gây ra đau đớn và không được khuyến khích.",
     "link": "https://vnexpress.net/vi-sao-nam-gioi-khong-the-mang-thai-4864609.html",
@@ -2862,6 +2858,37 @@
       },
       {
         "text": "Nam giới không thể mang thai do thiếu sức khỏe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xúc động chương trình nghệ thuật \"Sáng mãi truyền thống phụ nữ Ba đảm đang\"",
+    "content": "Chương trình nghệ thuật \"Sáng mãi truyền thống phụ nữ Ba đảm đang\" diễn ra vào tối 22/3 đã tôn vinh những đóng góp to lớn của phụ nữ Việt Nam trong lịch sử. Được tổ chức bởi Hội Liên hiệp Phụ nữ Hà Nội và Đài PT-TH Hà Nội, chương trình có sự tham gia của nhiều nghệ sĩ nổi tiếng và tái hiện lại phong trào \"Ba đảm đang\" khởi nguồn 60 năm trước tại Đan Phượng. Chương trình không chỉ là một lời tri ân mà còn nhắc nhở về trách nhiệm gìn giữ và phát huy truyền thống tốt đẹp của phụ nữ Việt Nam.",
+    "link": "https://dantri.com.vn/giai-tri/xuc-dong-chuong-trinh-nghe-thuat-sang-mai-truyen-thong-phu-nu-ba-dam-dang-20250323175226542.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chương trình \"Sáng mãi truyền thống phụ nữ Ba đảm đang\" được tổ chức vào ngày nào?",
+    "answers": [
+      {
+        "text": "22/3",
+        "correct": true
+      },
+      {
+        "text": "23/3",
+        "correct": false
+      },
+      {
+        "text": "21/3",
+        "correct": false
+      },
+      {
+        "text": "20/3",
+        "correct": false
+      },
+      {
+        "text": "25/3",
         "correct": false
       }
     ]
@@ -2974,37 +3001,6 @@
       },
       {
         "text": "Vì anh muốn thay đổi cách tính điểm trong trận đấu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Haaland giúp Na Uy ra quân đại thắng ở vòng loại World Cup",
-    "content": "Erling Haaland cùng đội tuyển Na Uy đã có màn ra quân ấn tượng tại vòng loại World Cup 2026 khi đánh bại Moldova với tỷ số 5-0. Trong trận đấu, Haaland ghi một bàn thắng, giúp anh nâng kỷ lục lập công cho đội tuyển lên 39 bàn. Na Uy nổi bật với những pha tấn công mạnh mẽ, khiến đội chủ nhà Moldova gặp nhiều khó khăn trong việc phòng ngự. Trận thắng này đưa Na Uy lên dẫn đầu bảng I ngay sau lượt trận đầu tiên của bảng đấu.",
-    "link": "https://vnexpress.net/haaland-giup-na-uy-ra-quan-dai-thang-o-vong-loai-world-cup-4864684.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Na Uy đã thắng Moldova với tỷ số bao nhiêu ở vòng loại World Cup?",
-    "answers": [
-      {
-        "text": "5-0",
-        "correct": true
-      },
-      {
-        "text": "3-1",
-        "correct": false
-      },
-      {
-        "text": "4-2",
-        "correct": false
-      },
-      {
-        "text": "2-0",
-        "correct": false
-      },
-      {
-        "text": "1-1",
         "correct": false
       }
     ]
