--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Giá trứng gây sức ép lên chính quyền ông Trump",
+    "content": "Giá trứng tại Mỹ đang tăng mạnh do dịch cúm gia cầm H5N1 đã tàn phá đàn gia cầm, khiến chính quyền Tổng thống Donald Trump phải nhập khẩu hàng triệu quả trứng từ Thổ Nhĩ Kỳ và Hàn Quốc. Mặc dù Trump đã cam kết giảm giá trứng trong chiến dịch tranh cử, nhưng giá cả vẫn tiếp tục tăng. Giá trứng lên đến 4,9 USD cho một vỉ 12 quả, với dự báo sẽ còn tăng trong thời gian tới. Chính quyền đang triển khai các biện pháp dài hạn để ổn định nguồn cung trứng và khắc phục tác động của cúm gia cầm.",
+    "link": "https://tuoitre.vn/gia-trung-gay-suc-ep-len-chinh-quyen-ong-trump-20250324062105446.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao giá trứng ở Mỹ lại tăng cao?",
+    "answers": [
+      {
+        "text": "Do dịch cúm gia cầm H5N1 tàn phá đàn gia cầm.",
+        "correct": true
+      },
+      {
+        "text": "Do chính sách thuế của chính phủ.",
+        "correct": false
+      },
+      {
+        "text": "Vì nhu cầu tiêu thụ trứng tăng cao.",
+        "correct": false
+      },
+      {
+        "text": "Do giá thực phẩm tăng trên toàn cầu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Djokovic xô đổ kỷ lục của Nadal",
     "content": "Novak Djokovic đã chính thức xô đổ kỷ lục của Rafael Nadal với trận thắng thứ 411 tại ATP Tour, khi đánh bại Camilo Ugo Carabelli với tỷ số 6-1, 7-6(1) tại vòng ba Miami Mở rộng. Chiến thắng này giúp Djokovic vượt qua kỷ lục 410 trận thắng ở Masters 1000 của Nadal. Djokovic hiện tại cũng giữ nhiều kỷ lục khác tại Masters 1000, và đang hướng tới danh hiệu Miami lần thứ bảy.",
     "link": "https://vnexpress.net/djokovic-xo-do-ky-luc-cua-nadal-4864958.html",
@@ -681,28 +708,28 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
     "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
     "answers": [
       {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
         "correct": true
       },
       {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "text": "Để xây dựng một cầu mới.",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào đáng kể",
+        "text": "Để tổ chức lễ hội âm nhạc.",
         "correct": false
       },
       {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
@@ -762,28 +789,28 @@
     ]
   },
   {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
     "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
     "answers": [
       {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
         "correct": true
       },
       {
-        "text": "Để xây dựng một cầu mới.",
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
         "correct": false
       },
       {
-        "text": "Để tổ chức lễ hội âm nhạc.",
+        "text": "Không có sự thay đổi nào đáng kể",
         "correct": false
       },
       {
-        "text": "Vì lý do an ninh quốc gia.",
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
@@ -2497,33 +2524,6 @@
     ]
   },
   {
-    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
-    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
-    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
-    "answers": [
-      {
-        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hệ lụy 'tình một đêm'",
     "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
     "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
@@ -2550,6 +2550,33 @@
       },
       {
         "text": "Tăng cường sức khỏe sinh lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
+    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
+    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
+    "answers": [
+      {
+        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
         "correct": false
       }
     ]
