--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Dịch vụ việc làm cho 'mẹ bỉm sữa' ở Trung Quốc",
+    "content": "Nhiều thành phố ở Trung Quốc đang triển khai dịch vụ việc làm linh hoạt dành cho các bà mẹ đang nuôi con nhỏ, nhằm giúp họ vừa kiếm tiền vừa có thời gian chăm sóc gia đình. Theo thống kê, tỷ lệ sinh ở Trung Quốc đã giảm liên tục trong 7 năm qua, buộc chính phủ phải đưa ra các chính sách hỗ trợ. Các công việc 'mother-friendly' giúp phụ nữ cân bằng công việc và trách nhiệm gia đình, đồng thời tạo ra môi trường làm việc thuận lợi cho họ. Nhiều công ty đã cung cấp hàng ngàn vị trí việc làm với giờ làm linh hoạt để thu hút các bà mẹ tham gia lực lượng lao động.",
+    "link": "https://vnexpress.net/dich-vu-viec-lam-cho-me-bim-sua-o-trung-quoc-4864887.html",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Dịch vụ việc làm cho 'mẹ bỉm sữa' ở Trung Quốc có ý nghĩa gì?",
+    "answers": [
+      {
+        "text": "Giúp các bà mẹ vừa kiếm tiền vừa chăm sóc gia đình.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường số lượng việc làm cho nam giới.",
+        "correct": false
+      },
+      {
+        "text": "Giảm tỷ lệ sinh ở Trung Quốc.",
+        "correct": false
+      },
+      {
+        "text": "Tạo ra môi trường làm việc không thân thiện.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá trứng gây sức ép lên chính quyền ông Trump",
     "content": "Giá trứng tại Mỹ đang tăng mạnh do dịch cúm gia cầm H5N1 đã tàn phá đàn gia cầm, khiến chính quyền Tổng thống Donald Trump phải nhập khẩu hàng triệu quả trứng từ Thổ Nhĩ Kỳ và Hàn Quốc. Mặc dù Trump đã cam kết giảm giá trứng trong chiến dịch tranh cử, nhưng giá cả vẫn tiếp tục tăng. Giá trứng lên đến 4,9 USD cho một vỉ 12 quả, với dự báo sẽ còn tăng trong thời gian tới. Chính quyền đang triển khai các biện pháp dài hạn để ổn định nguồn cung trứng và khắc phục tác động của cúm gia cầm.",
     "link": "https://tuoitre.vn/gia-trung-gay-suc-ep-len-chinh-quyen-ong-trump-20250324062105446.htm",
@@ -780,6 +807,60 @@
     ]
   },
   {
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "answers": [
+      {
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "correct": true
+      },
+      {
+        "text": "Lễ hội mùa xuân",
+        "correct": false
+      },
+      {
+        "text": "Cuộc thi thể thao quốc gia",
+        "correct": false
+      },
+      {
+        "text": "Ngày Quốc tế Phụ nữ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
+    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
+    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
+    "answers": [
+      {
+        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -833,60 +914,6 @@
       },
       {
         "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
-    "answers": [
-      {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội mùa xuân",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao quốc gia",
-        "correct": false
-      },
-      {
-        "text": "Ngày Quốc tế Phụ nữ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
-    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
-    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
-    "answers": [
-      {
-        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
-        "correct": false
-      },
-      {
-        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
         "correct": false
       }
     ]
